# ZybotR2-96-fpt19

./: .gitignore  .gitmodules  LICENSE  README.md
ultra96/ROOT_FS/app/fad/: CMakeLists.txt
ultra96/ROOT_FS/app/fad/data/Common/: motor.yaml
ultra96/ROOT_FS/app/fad/data/ConstraintGenerator/: param.yaml
ultra96/ROOT_FS/app/fad/data/ConstraintGenerator/PedestrianDetector/: param.yaml
ultra96/ROOT_FS/app/fad/data/ConstraintGenerator/TrafficLightDetector/: param.yaml
ultra96/ROOT_FS/app/fad/data/ConstraintGenerator/TrafficLightDetector/HaarLike/: red_tl_cascade.xml
ultra96/ROOT_FS/app/fad/data/HWController/: optor_param_1.txt  optor_param_2.txt  optor_right_calibration_parameter_1.xml  param.yaml  pcam_calibration_parameter_1.xml  webcam_vga_calibration_parameter_1.xml
ultra96/ROOT_FS/app/fad/data/Handler/: param.yaml
ultra96/ROOT_FS/app/fad/data/OdometryCalculator/PatternMatchingVOCalculator/: param.yaml
ultra96/ROOT_FS/app/fad/data/OdometryCalculator/PatternMatchingVOCalculator/PatternMatcher/TMPatternMatcher/: param.yaml
ultra96/ROOT_FS/app/fad/data/OdometryCalculator/RoadSurfaceVOCalculator/: param.yaml  pattern_matcher.yaml
ultra96/ROOT_FS/app/fad/data/OdometryCalculator/VOCalculator/: param.yaml
ultra96/ROOT_FS/app/fad/data/OdometryCalculator/WOCalculator/: param.yaml
ultra96/ROOT_FS/app/fad/data/PathPlanner/: param.yaml
ultra96/ROOT_FS/app/fad/data/PathTracer/: param.yaml
ultra96/ROOT_FS/app/fad/data/PathTracer/Tracer/LQR/: param.yaml
ultra96/ROOT_FS/app/fad/data/PathTracer/Tracer/PurePursuit/: param.yaml
ultra96/ROOT_FS/app/fad/data/PathTracer/Tracer/SelfLocalizedPurePursuit/: param.yaml
ultra96/ROOT_FS/app/fad/data/RoutePlanner/: environment.yaml  map.xcf  param.yaml  path_connection.yaml  paths.yaml  traffic_light.yaml
ultra96/ROOT_FS/app/fad/data/RoutePlanner/route/: final_round.yaml  mini.yaml  preliminary_round.yaml
ultra96/ROOT_FS/app/fad/data/StateEstimator/: param.yaml
ultra96/ROOT_FS/app/fad/data/StateEstimator/ParticleFilter/: param.yaml
ultra96/ROOT_FS/app/fad/include/: AngularVelocity.hpp  CSVDumper.hpp  ConstraintType.hpp  EnvironmentMap.hpp  HandlerHelper.hpp  IMUQuat.hpp  InertialOdometry.hpp  ParticleState.hpp  PatternMatcherDelta.hpp  PedestrianStatus.hpp  ProcTimer.hpp  RoadType.hpp  RouteInfo.hpp  TLState.hpp  Theta.hpp  TrafficLightStatus.hpp  Util.hpp  VehicleState.hpp  VisualOdometry.hpp  WheelOdometry.hpp  YAMLHelper.hpp
ultra96/ROOT_FS/app/fad/include/base/: StateBase.hpp
ultra96/ROOT_FS/app/fad/src/: main.cpp  main.h
ultra96/ROOT_FS/app/fad/src/fad/: Handler.cpp  Handler.h
ultra96/ROOT_FS/app/fad/src/fad/ConstraintGenerator/: ConstraintGenerator.cpp  ConstraintGenerator.h
ultra96/ROOT_FS/app/fad/src/fad/ConstraintGenerator/PedestrianDetector/: PedestrianDetector.cpp  PedestrianDetector.h
ultra96/ROOT_FS/app/fad/src/fad/ConstraintGenerator/TrafficLightDetector/: TrafficLightDetector.cpp  TrafficLightDetector.h
ultra96/ROOT_FS/app/fad/src/fad/HWController/CmodController/: CmodController.cpp  CmodController.h
ultra96/ROOT_FS/app/fad/src/fad/HWController/OptorCamController/: OptorCamController.cpp  OptorCamController.h
ultra96/ROOT_FS/app/fad/src/fad/HWController/OptorIMUController/: OptorIMUController.cpp  OptorIMUController.h
ultra96/ROOT_FS/app/fad/src/fad/HWController/PcamController/: PcamController.cpp  PcamController.h
ultra96/ROOT_FS/app/fad/src/fad/HWController/PcamController/PcamImageCorrector/: PcamImageCorrector.cpp  PcamImageCorrector.h
ultra96/ROOT_FS/app/fad/src/fad/HWController/WebcamController/: WebcamController.cpp  WebcamController.h
ultra96/ROOT_FS/app/fad/src/fad/OdometryCalculator/IOCalculator/: IOCalculator.cpp  IOCalculator.h
ultra96/ROOT_FS/app/fad/src/fad/OdometryCalculator/PatternMatchingVOCalculator/: PatternMatchingVOCalculator.cpp  PatternMatchingVOCalculator.h
ultra96/ROOT_FS/app/fad/src/fad/OdometryCalculator/PatternMatchingVOCalculator/PatternMatcher/: PatternMatcherBase.cpp  PatternMatcherBase.h
ultra96/ROOT_FS/app/fad/src/fad/OdometryCalculator/RoadSurfaceVOCalculator/: RoadSurfaceVOCalculator.cpp  RoadSurfaceVOCalculator.h
ultra96/ROOT_FS/app/fad/src/fad/OdometryCalculator/VOCalculator/: VOCalculator.cpp  VOCalculator.h
ultra96/ROOT_FS/app/fad/src/fad/OdometryCalculator/WOCalculator/: WOCalculator.cpp  WOCalculator.h
ultra96/ROOT_FS/app/fad/src/fad/PathPlanner/: PathPlanner.cpp  PathPlanner.h
ultra96/ROOT_FS/app/fad/src/fad/PathTracer/: PathTracer.cpp  PathTracer.h
ultra96/ROOT_FS/app/fad/src/fad/PathTracer/Tracer/: TracerBase.cpp  TracerBase.h
ultra96/ROOT_FS/app/fad/src/fad/PathTracer/Tracer/LQR/: LQR.cpp  LQR.h
ultra96/ROOT_FS/app/fad/src/fad/PathTracer/Tracer/PurePursuit/: PurePursuit.cpp  (+1 more)
ultra96/ROOT_FS/app/fad/src/fad/RoutePlanner/: RoutePlanner.cpp  RoutePlanner.h
ultra96/ROOT_FS/app/fad/src/fad/StateEstimator/: StateEstimator.cpp  StateEstimator.h
ultra96/ROOT_FS/app/fad/src/fad/StateEstimator/ParticleFilter/: ParticleFilter.cpp  ParticleFilter.h
ultra96/ROOT_FS/app/other/gpio-test/: CMakeLists.txt
ultra96/ROOT_FS/app/other/gpio-test/src/: main.cpp
ultra96/ROOT_FS/app/other/webcam-test/: CMakeLists.txt
ultra96/ROOT_FS/app/other/webcam-test/data/FHD/: calib_param.xml
ultra96/ROOT_FS/app/other/webcam-test/src/: main.cpp  main.h
ultra96/ROOT_FS/lib/zynqpl/: CMakeLists.txt
ultra96/ROOT_FS/lib/zynqpl/include/: zynqpl.h
ultra96/ROOT_FS/lib/zynqpl/include/cmod/: cmod.h
ultra96/ROOT_FS/lib/zynqpl/include/cmod/reg/: RegAccessor.h
ultra96/ROOT_FS/lib/zynqpl/include/pcam/: pcam.h
ultra96/ROOT_FS/lib/zynqpl/include/pcam/ps/: PSGPIO.h  PSIIC.h
ultra96/ROOT_FS/lib/zynqpl/include/pcam/video/: VideoController.h
ultra96/ROOT_FS/lib/zynqpl/include/preimproc/: preimproc.h
ultra96/ROOT_FS/lib/zynqpl/src/cmod/: cmod.cpp
ultra96/ROOT_FS/lib/zynqpl/src/cmod/reg/: RegAccessor.cpp
ultra96/ROOT_FS/lib/zynqpl/src/pcam/: pcam.cpp
ultra96/ROOT_FS/lib/zynqpl/src/pcam/ps/: PSGPIO.cpp  PSIIC.cpp
ultra96/ROOT_FS/lib/zynqpl/src/pcam/video/: VideoController.cpp
ultra96/ROOT_FS/lib/zynqpl/src/preimproc/: preimproc.cpp
(+164 files in other folders)
